--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -17,3 +17,11 @@
 //   border: 1px solid var(--border-color);
 //   transition: border-color 500ms ease;
 // }
+
+//sidebar logo size
+.sidebar-about .avatar {
+    width: 11rem;
+    height: 11rem;
+//     border-radius: 100%;
+//     overflow: hidden;
+}
